--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,14 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
-    color: #5a5a5a;
+    color: rgb(110, 110, 110);
     font-family: Arial, Helvetica, sans-serif;
     box-sizing:border-box;
+}
+
+.Icon {
+    width: 1.5em;    
+    filter: invert(32%) sepia(3%) saturate(14%) hue-rotate(356deg) brightness(95%) contrast(77%);
 }
 
 /* Begining Header style */
@@ -17,32 +22,37 @@ header {
     margin-top: 1.5em;
 }
 
-.Contenedor_Header{    
-    width: 100%;
-    display: flex;    
+.Contenedor_Header{   
+    position: fixed;
+    top: 0; 
+    left: 0;    
+    width: 100vw;    
+    display: flex;   
     justify-content: space-between;
     align-items: center;
+    background-color: #fff;
+    z-index: 99;
 }
 
 #Logo {
+    padding-left: 20px;
     width: 4em;
+    flex-grow: 1;
 }
 
 nav {    
     display: flex;
     width: 30em;
-    justify-content: center;
     font-weight: bold;
     white-space: nowrap;
 }
 
 .Busqueda_Header {
+    display: flex;
     width: fit-content;
-}
-
-.Icon_Header {
-    width: 1.5em;
-    filter: invert(32%) sepia(3%) saturate(14%) hue-rotate(356deg) brightness(95%) contrast(77%);
+    flex-grow: 1;
+    justify-content: end;
+    margin-right: 50px;
 }
 
 nav ul li{
@@ -63,3 +73,210 @@ ul li{
 /* ------------------ */
 /* Begining slider style */
 
+.Slider section {    
+    display: flex;
+    width: 100%;    
+    padding: 2em;
+}
+
+.Slider__section-div {
+    width: 60%;
+    margin-top: 9em;
+    flex-grow: 2;    
+}
+
+.Slider__section-div h4 {
+    color: #999;
+    font-size: 23px;
+    font-weight: lighter;
+    letter-spacing: 0.8px;
+}
+
+.Slider__section-div h3 {
+    font-size: 2em;
+    font-weight: bold;
+    letter-spacing: 2px;
+    padding: 15px 0;
+}
+
+.Slider__section-div-p {
+    display: inline-block;
+    color: #999;
+    font-size: 18px;
+    padding: 15px 5px;
+}
+
+.Precio {
+    color: #555;
+}
+
+del {
+    text-decoration: line-through;
+}
+
+.Slider__div-img_Container {
+    margin-top: 5em;
+    max-width: 400px;
+    height: auto;    
+}
+
+.Slider__div-img_Container img {
+    width: 100%;
+}
+
+.Button__Container {
+    margin-top: 30px;
+    height: 100px;
+    display: flex;
+}
+
+.Button__Container-button {    
+    background-color: #e99c2e;
+    color: #fff;
+    border: none;
+    width: 150px;
+    height: 50px;
+    margin-right: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+
+.Button__Container img {
+    filter: invert();
+    height: fit-content;
+}
+
+.Button-White_Background {
+    background-color: inherit;
+    color: #e99c2e;    
+}
+
+    /* Slider*/
+
+.Slider__wrapper {
+    position: relative;  
+    max-width: 100vw;
+    height: 90vh;    
+    background-color: #f3f3f3;
+}
+
+.Slider {
+    display: flex;
+    aspect-ratio: 16 / 9;
+    overflow: hidden;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth
+}
+
+.Slider > section {
+
+    flex: 1 0 100%;
+    /*
+    flex-grow: 1;
+    flex-shrink: 0;
+    flex-basis: 100%;
+    */
+}
+
+.Slider-nav {
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
+.Slider-nav a {
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    background-color: #e99c2e;
+    opacity: 0.75;
+}
+
+/*Ending slider*/
+/*-------------------------*/
+/*Begining Popular products*/
+
+#Popular_Products {
+    background: #fff;
+    display: flex;
+    margin: 5em 3em;
+
+}
+
+.Popular_Products__article-section {
+    background-color: #f3f3f3;
+    margin: 0px 1em;
+    display: grid;
+    text-align: center;    
+    padding: 1em .3em;
+}
+
+.Popular_Products__article-section * {
+    margin: 0px auto;    
+}
+
+.Popular_Products__article-section p {
+    color: #aaa;
+}
+
+.Popular_Products__article-section-div {
+    margin: 1em;    
+    display: grid;
+    text-align: start;
+}
+
+.Popular_Products__article-section > h3 {
+    padding: 1em 0;
+}
+
+.Popular_Products__article-section:first-child > img {
+    margin-top: 1em;
+}
+
+.Popular_Products__article-section-div div > img {
+    height: min-content;
+}
+
+.Popular_Products__article-section-div h3{
+    color: #333;
+}
+
+.Popular_Products__article-section-div {
+    width: 100% - 1em;
+    height: 100% - 1em;
+    place-self: center;
+    grid-template-columns: 1.5fr 2fr;
+    
+}
+
+.Popular_Products__article-section-div h3{
+    margin-bottom: 1em;
+}
+
+
+.Resaltar {
+    color: #000 !important;
+}
+
+.Resaltar {
+    margin-top: 0.6em;
+}
+
+.Resaltar bold {
+    color: #e99c2e;
+    font-weight: bold;
+}
+
+.Popular_Products__article-section-div div button {
+    margin-top: 1.5em;
+    padding: .8em;
+    background-color: inherit;
+    color: #555;
+    border: 1px solid #555;
+}
