--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ del {
     background: #fff;
     display: flex;
     margin: 5em 3em;
-
+    margin-bottom: 0;
 }
 
 .Popular_Products__article-section {
@@ -215,6 +215,12 @@ del {
     display: grid;
     text-align: center;    
     padding: 1em .3em;
+    padding-bottom: 0;
+}
+
+.Popular_Products__article-section:last-child {
+    padding-bottom: 1em;
+    padding-top: 0;
 }
 
 .Popular_Products__article-section * {
@@ -280,3 +286,177 @@ del {
     color: #555;
     border: 1px solid #555;
 }
+
+/*Ending Popular Products*/
+/*-------------------------*/
+/*Begining New Arrivals*/
+
+.New-Arrivals > h2 {
+    text-align: center;
+    margin: 2em;
+}
+
+.New-Arrivals__grid-wapper {
+    display: grid;
+    margin: 1em;
+    text-align: center;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2em;
+}
+
+.New-Arrivals__grid-wapper > section {
+    background-color: #f5f5f5;
+    padding: 3em 0;
+    position: relative;
+    display: grid;
+    place-items: center;
+    grid-template-rows: 2fr 1fr;
+}
+
+.New-Arrivals__grid-wapper-text {
+    background-color: #fff;    
+    position: absolute;
+    width: 100%;
+    padding: 1em;
+    bottom: 0;
+
+    font-size: small;
+}
+
+
+/*Ending New Arrivals*/
+/*-------------------------*/
+/*Begining Sofa Colecction*/
+
+.Sofa-Collection {
+    background-image: url(/images/collection/sofa-collection-banner.jpg);
+    background-repeat: no-repeat;
+    height: 35em;
+    display: flex;
+    align-items: center;
+    color: #fff;
+    margin-top: 6em;
+}
+
+
+.Sofa-Collection__Content {
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+    align-items: left;
+    text-align: left;
+    position: relative;
+}
+
+
+.Sofa-Collection__Fondo {
+    background-color: rgba(50, 50, 50, .9);
+    position: absolute;
+    width: 35%;
+    height: 35em;
+}
+
+.Sofa-Collection__Content * {
+    color: #fff;    
+}
+
+.Sofa-Collection__Content > * {
+    margin-left: 1.5rem;
+}
+
+.Sofa-Collection h4 {
+    font-size: 2em;
+}
+
+.Sofa-Collection__Content button {
+    width: max-content;
+    padding: 1rem 2.5rem;
+    margin-top: 2rem;
+    background-color: #e99c2e;
+    border: none;
+}
+
+.Sofa-Collection__Content > p b {
+    color: #e99c2e;
+}
+
+/*Ending Sofa Colecction*/
+/*-------------------------*/
+/*Begining Latest Blog*/
+
+.Latest-Blog > h2 {
+    text-align: center;
+    margin: 2em;
+}
+
+.Latest-Blog__div {
+    display: grid;
+    margin: 2em;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1em;
+}
+
+.Latest-Blog__div > section > * {
+    font-size: medium;
+    margin-bottom: 1em;
+}
+
+.Date {
+    color: #aaa;
+    font-size: small;
+}
+
+.text {
+    font-size: x-small;
+}
+
+/*Ending Latest Blog*/
+/*-------------------------*/
+/*Begining Marcas*/
+
+.Marcas {
+    width: 100vw;
+}
+
+.Marcas__ul {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #f5f5f5;
+    
+}
+
+.Marcas__ul > li {
+    padding: 4em;
+    background-color: #f5f5f5;
+    flex-direction: column;
+}
+
+/*Ending Marcas*/
+/*-------------------------*/
+/*Begining footer*/
+
+footer {
+    margin: 3em 2em 2em 2em;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+footer h5 {
+    font-size: large;
+    margin-bottom: 2em;
+}
+
+footer *{    
+    display: flex;    
+    flex-direction: column;
+}
+
+footer > * > *{
+    margin-bottom: 1em;
+}
+
+        
+        
+        
+        
